--- a/app/src/main/res/layout/fragment_unavailable_dates.xml
+++ b/app/src/main/res/layout/fragment_unavailable_dates.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/galaxy_bg"
+    android:background="#696969"
     android:orientation="vertical">
 
     <LinearLayout
