Implemented filtering option API to app. Added clients booked activity. Implemented get all clients booked for talent API. Modified login page (Added checkbox for talent login). Implemented login as talent API.

--- a/app/src/main/res/layout/activity_filtering.xml
+++ b/app/src/main/res/layout/activity_filtering.xml
@@ -24,7 +24,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Location"
+                    android:text="Location Availability"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     tools:ignore="HardcodedText" />
@@ -107,7 +107,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
-                    android:text="Height (in centimeter)"
+                    android:text="Height (in inches)"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     tools:ignore="HardcodedText" />
