--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,6 +15,12 @@
             android:visible="false"
             tools:ignore="HardcodedText" />
         <item
+            android:id="@+id/nav_clients_booked"
+            android:icon="@drawable/ic_person_black"
+            android:title="Clients Booked"
+            android:visible="false"
+            tools:ignore="HardcodedText" />
+        <item
             android:id="@+id/nav_check_availability"
             android:icon="@drawable/ic_schedule_black"
             android:title="Check Availability"
